syntax = "proto3";

option go_package = "./;self_pb";

message ID {
    uint64 ID = 1;
}

message Regulation {
    string Name         = 1;
    string Abbreviation = 2;
    string Title        = 3;
    string PseudoID     = 4;
}

message Paragraph {
    uint64 ID        = 1;
    uint64 Num       = 2;
    bool HasLinks    = 3;
    bool IsTable     = 4;
    bool IsNFT       = 5;
    string Class     = 6;
    string Content   = 7;
    uint64 ChapterID = 8;
}

message Chapter {
    uint64 ID                     = 1;
    string PseudoID               = 2;
    string Name                   = 3;
    string Num                    = 4;
    string RegulationID           = 5;
    string OrderNum               = 6;
}

message Paragraphs {
    repeated Paragraph Paragraphs = 1;
}

message Status {
    string Status = 1;
}