
syntax = "proto3";

option go_package = "./;self_pb";

import "messages.proto";

service RegulationSupremeGRPC {
    rpc createRegulation(Regulation) returns (ID) {};
    rpc createChapter(Chapter) returns (ID) {};
    rpc createParagraphs(Paragraphs) returns (Status) {};
    rpc GenerateLinks(ID) returns (Status) {};
}
